--- a/views/urls_index.ejs
+++ b/views/urls_index.ejs
@@ -22,6 +22,7 @@
         <tr>
           <th scope="col">Short URL</th>
           <th scope="col">Long URL</th>
+          <th scope="col">Delete </scope></th>
         </tr>
       </thead>
       <tbody>
@@ -29,6 +30,7 @@
           <tr>
             <td><%= url %></td>
             <td><%= urls[url] %></td>
+            <td><form method="POST" action="/urls/9sm5xK/delete"><button type="submit" class="btn btn-primary">Delete</button></form></td>
           </tr>
         <% } %>
       </tbody>
