--- a/views/urls_index.ejs
+++ b/views/urls_index.ejs
@@ -22,7 +22,8 @@
         <tr>
           <th scope="col">Short URL</th>
           <th scope="col">Long URL</th>
-          <th scope="col">Delete </scope></th>
+          <th scope="col">Delete</th>
+          <th scope="col">Edit</th>
         </tr>
       </thead>
       <tbody>
@@ -31,6 +32,7 @@
             <td><%= url %></td>
             <td><%= urls[url] %></td>
             <td><form method="POST" action="/urls/9sm5xK/delete"><button type="submit" class="btn btn-primary">Delete</button></form></td>
+            <td><form method="GET" action="/urls/:shortURL"><button type="submit" class="btn btn-primary">Edit</button></form></td>
           </tr>
         <% } %>
       </tbody>
