--- a/views/urls_index.ejs
+++ b/views/urls_index.ejs
@@ -31,7 +31,7 @@
           <tr>
             <td><%= url %></td>
             <td><%= urls[url] %></td>
-            <td><form method="POST" action="/urls/9sm5xK/delete"><button type="submit" class="btn btn-primary">Delete</button></form></td>
+            <td><form method="POST" action="/urls/<%= url %>/delete"><button type="submit" class="btn btn-primary">Delete</button></form></td>
             <td><form method="GET" action="/urls/:shortURL"><button type="submit" class="btn btn-primary">Edit</button></form></td>
           </tr>
         <% } %>
