--- a/views/urls_index.ejs
+++ b/views/urls_index.ejs
@@ -32,7 +32,7 @@
             <td><%= url %></td>
             <td><%= urls[url] %></td>
             <td><form method="POST" action="/urls/<%= url %>/delete"><button type="submit" class="btn btn-primary">Delete</button></form></td>
-            <td><form method="GET" action="/urls/:shortURL"><button type="submit" class="btn btn-primary">Edit</button></form></td>
+            <td><form method="GET" action="/urls/<%= url %>"><button type="submit" class="btn btn-primary">Edit</button></form></td>
           </tr>
         <% } %>
       </tbody>
