--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -9,14 +9,28 @@
         <a class="nav-item nav-link" href="/urls">My URLs</a>
         <a class="nav-item nav-link" href="/urls/new">Create New URL</a>
         
+<% if (username) { %>
+  <form class="form-inline" action="/logout" method="POST">
+    <div class="form-group mb-2">
+      <h1> Hello <%= username %> </h1>
+      
+      <button type="submit" class="btn btn-primary">Log Out</button>
+    </div>
+  </form>
+<% } else { %>
+  <form class="form-inline" action="/login" method="POST">
+    <div class="form-group mb-2">
+      <label for="username">Enter Username:</label>
+      <input class="form-control" type="text" name="username" placeholder="username" style="width: 300px; margin: 1em">
+      <button type="submit" class="btn btn-primary">Submit</button>
+    </div>
+  </form>
+<% } %>
         
-        <form class="form-inline" action="/login" method="POST">
-          <div class="form-group mb-2">
-            <label for="username">Enter Username:</label>
-            <input class="form-control" type="text" name="username" placeholder="username" style="width: 300px; margin: 1em">
-            <button type="submit" class="btn btn-primary">Submit</button>
+        
          
-        </form>
+        
+       
       </div>
     </div>
   </nav>
