Get /login created

--- a/views/urls_register.ejs
+++ b/views/urls_register.ejs
@@ -1,4 +1,5 @@
 <form action ="/register" method='POST'>
+  <h3>Welcome to the Registration Page!</h3>
   <label>Enter E-mail</label>
   <input type= 'email' name= 'email' placeholder="example@example.com">
 
