--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -8,11 +8,13 @@
       <div class="navbar-nav">
         <a class="nav-item nav-link" href="/urls">My URLs</a>
         <a class="nav-item nav-link" href="/urls/new">Create New URL</a>
+        <a class="nav-item nav-link" href="/login">Login</a>
+        <a class="nav-item nav-link" href="/register">Register</a>
         
 <% if (username) { %>
   <form class="form-inline" action="/logout" method="POST">
     <div class="form-group mb-2">
-      <h1> Hello <%= username %> </h1>
+      <h3> Hello <%= username %> </h3>
       
       <button type="submit" class="btn btn-primary">Log Out</button>
     </div>
@@ -20,7 +22,7 @@
 <% } else if (id) { %>
   <form class="form-inline" action="/logout" method="POST">
     <div class="form-group mb-2">
-      <h1> Hello <%= id %> </h1>
+      <h3> Hello <%= id %> </h3>
       <button type="submit" class="btn btn-primary">Log Out</button>
     </div>
   </form>
